# leptodon-starter

./: .gitignore  .licensure.yml  .pre-commit-config.yaml  .tailwind  Cargo.toml  Makefile.toml  README.md  build.rs  flake.nix  index.html  input.css  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
codegen/: Cargo.toml  README.md
codegen/src/: main.rs
end2end/: ci-test-launch.sh  devenv.nix  devenv.yaml  flake.nix  package-lock.json  package.json  playwright.config.ts  test-codegen.sh
end2end/tests/: example.spec.ts
src/: app.rs  lib.rs  main.rs
style/: output.css
