[package]
name = "starter"
description = "A Leptodon starting template."
version = "1.0.0"
edition = "2024"
resolver = "2"

[lib]
name = "starter"
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package.starter]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = 2

[dependencies]
http = "1"
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "trace"], optional = true }
axum = { version = "0.8.9", optional = true, features = ["macros"] }

tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

console_log = "1"
console_error_panic_hook = "0.1"

leptos = { version = "0.8.19", features = ["rkyv", "tracing"] }
leptos_axum = { version = "0.8.9", optional = true }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13" }

wasm-bindgen = { version = "=0.2.117", optional = true }

leptodon = { version = "1.3.0", default-features = false, features = [] }
leptos-struct-table = { version = "0.18", features = ["chrono"] }

axum-extra = { version = "0.12.6", optional = true, features = ["cookie"] }

regex = { version = "1.12", optional = true }
dateparser = { version = "0.2.1", optional = true }
thiserror = "2.0.18"
log = "0.4"
cfg-if = "1.0.4"
chrono = { version = "0.4.44", features = ["serde"] }

anyhow = { version = "1.0.102", optional = true }
serde = "1"

# Logging
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }
tracing-forest = { version = "0.3.1", features = ["tokio", "smallvec", "ansi"], optional = true }

[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptodon/ssr",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:axum",
    "dep:axum-extra",
    "dep:regex",
    "dep:anyhow",
    "dep:dateparser",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-forest",
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "leptodon/hydrate"
]
csr = [
    "leptos/csr",
    "leptodon/csr"
]
tower = ["dep:tower"]
tower-http = ["dep:tower-http"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# # https://github.com/leptos-rs/leptos/issues/3813#issuecomment-3563904837
# Disabling (thus enabling this option) the erasure of components causes large linker errors in this project.

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "starter"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "sh -C ci-test-launch.sh"
end2end-dir = "end2end"
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
